# sebigy-hittaskolan-api

./: .env  .env_docker_local  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 306a7534608c_.py  4d66e63c2aa7_.py  616d0f3aa9fc_.py  74b14885fb4c_.py  d1749643403f_.py  d56f120b5c15_.py
app/: kyoujy_test.py  main.py
app/core/: auth_util.py  config.py  deps.py  dt_utils.py  id_generator.py  obj_utils.py  socket_handlers.py
app/db/: session.py  session_celery.py
app/models/: base.py  school.py
app/routers/: schools.py
app/schemas/: school.py
app/services/: base_service.py  school_service.py
